[tool.poetry]
name = "jsonformer"
version = "0.8.0"
description = ""
authors = ["1rgs <rgsduke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
torch = "^2.0.0"
accelerate = "^0.18.0"
bitsandbytes = "^0.38.1"
transformers = "^4.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true